hphp/test/zend/bad/ext-gd/imagelayereffect_error1.php
<?php
$layer = imagelayereffect('invalid_resource', IMG_EFFECT_REPLACE);
?>